bugfix: fullscreen in analysis was position absolute and only z-index 30

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -179,7 +179,6 @@
   .analysis-view {
     height: 100%;
     width: 100%;
-    position: absolute !important;
     margin-top: 0;
     z-index: $analysis-view-z;
 
